[gd_scene load_steps=4 format=3 uid="uid://bcfxuxp4tc752"]

[ext_resource type="Script" uid="uid://cgok855xc8c5n" path="res://script/games/settings.gd" id="1_cjs7k"]
[ext_resource type="Theme" uid="uid://cdynjfvdtavlt" path="res://scene/main_menu/main_menu_button_theme.tres" id="2_iexvc"]
[ext_resource type="Script" uid="uid://dxn2uh2p3i1q" path="res://script/games/settings_option.gd" id="2_settings"]

[node name="Setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cjs7k")

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03137255, 0.03137255, 0.03137255, 0.88235295)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="DifficultyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_iexvc")
theme_override_font_sizes/font_size = 32
text = "DIFFICULT LEVEL"
horizontal_alignment = 1

[node name="DifficultyOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_iexvc")
selected = 0
item_count = 3
popup/item_0/text = "LOW"
popup/item_0/id = 0
popup/item_1/text = "MEDIUM"
popup/item_1/id = 1
popup/item_2/text = "HIGH"
popup/item_2/id = 0
script = ExtResource("2_settings")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DurationLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_iexvc")
theme_override_font_sizes/font_size = 32
text = "DURATION"
horizontal_alignment = 1

[node name="DurationOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_iexvc")
theme_override_font_sizes/font_size = 32
selected = 0
item_count = 3
popup/item_0/text = "30s"
popup/item_0/id = 0
popup/item_1/text = "60s"
popup/item_1/id = 1
popup/item_2/text = "90s"
popup/item_2/id = 2
script = ExtResource("2_settings")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -280.0
offset_right = 150.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_iexvc")
theme_override_font_sizes/font_size = 32
text = "START"
